tetrate/tis0304/check-existing-tls.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-existing-tls
  annotations:
    policies.kyverno.io/title: Check Existing TLS Credentials
    policies.kyverno.io/category: Istio Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Gateway
    policies.kyverno.io/description: >-
      Ensures that TLS credentials referenced in a Gateway resource exist as Secrets
      in the same namespace before allowing creation or updates. This prevents
      misconfigurations that could lead to TLS failures in Istio.
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-existing-tls
      match:
        any:
          - resources:
              kinds:
                - Gateway
              operations:
                - CREATE
                - UPDATE
      context:
        - name: manifestNamespace
          variable:
            jmesPath: "request.object.metadata.namespace || default"

        - name: manifestTLS
          variable:
            jmesPath: "request.object.spec.servers[].tls.credentialName || []"

        - name: existingTLS
          apiCall:
            urlPath: "/api/v1/namespaces/{{ manifestNamespace }}/secrets"
            jmesPath: "items[].metadata.name"

      validate:
        message: "The following TLS credentials: {{ manifestTLS }} are missing in namespace {{ manifestNamespace }}, ExistingTLS: {{ existingTLS }}"
        deny:
          conditions:
            any:
              - key: "{{ manifestTLS }}"
                operator: AnyNotIn
                value: "{{ existingTLS }}"
