tetrate/tis0304/e2e/secret-resource.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-tls-secret
type: kubernetes.io/tls
data:
  tls.crt: "c29tZS1yYW5kb20tYmFzZTY0LWVuY29kZWQtdGxzLmNydA=="  # Some random base64 string
  tls.key: "c29tZS1yYW5kb20tYmFzZTY0LWVuY29kZWQtdGxzLmtleQ=="  # Some random base64 string
