tetrate/tis0304/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-check-existing-tls
spec:
  steps:
    - name: apply-gateway-policy
      try:
        - apply:
            file: ../check-existing-tls.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-secrets-rbac
      try: 
        - apply:
            file: rbac.yaml

    - name: apply-secrets-resource
      try: 
        - apply:
            file: secret-resource.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
